Corrected vertical alignment for crumbs in navbar which broke because of previous commit

--- a/app/assets/stylesheets/material_icons.css.less
+++ b/app/assets/stylesheets/material_icons.css.less
@@ -75,9 +75,13 @@ a.btn-fab .mdi::before{
   left: -8px;
 }
 
-.dodona-navbar .mdi::before {
-  vertical-align: text-bottom;
-  line-height: 30px;
+.dodona-navbar {
+  .actions , .dropdown {
+    .mdi::before {
+      vertical-align: text-bottom;
+      line-height: 30px;
+    }
+  }
 }
 
 .nav .mdi::before {
